Downgrade to JDK 19 for GitHub